Add memory create API and Windows start/stop scripts
